removed overflow / fixed positioning

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ html, body{
 
 body{
     background: #f9f9f9;
-    overflow: hidden;
     display: flex;
     width: 100vw;
     height: 100vh;
@@ -23,7 +22,7 @@ body{
 }
 
 .title{
-    margin: 25vh auto auto auto;
+    margin: 20vh auto auto auto;
     text-align: center;
 }
 
